@@ -17,6 +17,9 @@
 	<table>
 		<thead>
 			<tr###CLASS_HEADERROW###>
+<!-- ###LISTHEADER_WRAPPER_IMAGE### -->
+    <th scope="col"></th>
+<!-- ###LISTHEADER_WRAPPER_IMAGE### -->
 <!-- ###LISTHEADER_WRAPPER_CATEGORY### -->      <th scope="col"###CLASS_HEADERCATEGORY###>###HEADER_CATEGORY###</th>
 <!-- ###LISTHEADER_WRAPPER_CATEGORY### -->
 <!-- ###LISTHEADER_WRAPPER_TITLE### -->      <th scope="col"###CLASS_HEADERTITLE###>###HEADER_TITLE###</th>
@@ -64,6 +67,9 @@
 
 <!-- ###LIST_ITEM### -->
 			<tr###CLASS_ITEMROW###>
+<!-- ###LISTITEM_WRAPPER_IMAGE### -->
+	<td###CLASS_LISTIMAGE###>###IMAGE###</td>
+<!-- ###LISTITEM_WRAPPER_IMAGE### -->
 <!-- ###LISTITEM_WRAPPER_CATEGORY### -->      <td###CLASS_LISTCATEGORY###>###CATEGORY###</td>
 <!-- ###LISTITEM_WRAPPER_CATEGORY### -->
 <!-- ###LISTITEM_WRAPPER_TITLE### -->      <td###CLASS_LISTTITLE###>###TITLE_LINK###</td>
