@@ -420,6 +420,15 @@ final class tx_seminars_seminarchild extends tx_seminars_seminar {
 	public function setNumberOfTimeSlots($numberOfTimeSlots) {
 		$this->setRecordPropertyInteger('timeslots', $numberOfTimeSlots);
 	}
+
+	/**
+	 * Sets the file name of the image.
+	 *
+	 * @param string the name of the image, must not be empty
+	 */
+	public function setImage($fileName) {
+		$this->setRecordPropertyString('image', $fileName);
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminarst/tests/fixtures/class.tx_seminars_seminarchild.php']) {
